--- a/templates/result.html
+++ b/templates/result.html
@@ -8,7 +8,7 @@
     </head>
     <body>
     <div class="row">
-	<div class="list-group col-2">
+	<div class="list-group col-2" style="padding-right:0px;">
 	{% for i in ole_dir_list %}
 	    {% if "/" in i %}
 	      {% set length = i.split('/')|length|int-1 %}
@@ -23,8 +23,8 @@
             {% endif %}
         {% endfor %}
         </div>
-        <div class="col-10">
-	    <textarea style="width: 98%; height:100%">{{ encode_data }}</textarea>
+        <div class="col-10" style="padding-left:0px; padding-right:0px;">
+	    <textarea style="resize: none; font-family: monospace; width: 99%; height:100%">{{ encode_data }}</textarea>
 	</div>
     </div>
     </body>
