--- a/templates/result.html
+++ b/templates/result.html
@@ -23,8 +23,18 @@
             {% endif %}
         {% endfor %}
         </div>
-        <div class="col-10" style="padding-left:0px; padding-right:0px;">
-	    <textarea style="resize: none; font-family: monospace; width: 99%; height:100%">{{ encode_data }}</textarea>
+        <div class="col-8" style="padding-left:0px; padding-right:0px;">
+	    {% if request.args.get("encode") == "zlib" %}
+	    <textarea style="resize: none; font-family: monospace; width: 100%; height:100%">{{ encode_data }}</textarea>
+	    {% elif request.args.get("encode") == "zlib^" %}
+	    <textarea style="resize: none; font-family: monospace; width: 100%; height:100%">{{ decode_data }}</textarea>
+	    {% else %}
+	    <textarea style="resize: none; font-family: monospace; width: 100%; height:100%">{{ encode_data }}</textarea>
+	    {% endif %}
+	</div>
+	<div class="list-group col-2" style="padding-left:0px; padding-right:0px;">
+	    <a href="&encode=zlib" class="list-group-item list-group-item-action">zlib encode</a>
+	    <a href="&decode=zlib^" class="list-group-item list-group-item-action">zlib decode</a>
 	</div>
     </div>
     </body>
