--- a/templates/result.html
+++ b/templates/result.html
@@ -33,8 +33,13 @@
 	    {% endif %}
 	</div>
 	<div class="list-group col-2" style="padding-left:0px; padding-right:0px;">
-	    <a href="&encode=zlib" class="list-group-item list-group-item-action">zlib encode</a>
-	    <a href="&decode=zlib^" class="list-group-item list-group-item-action">zlib decode</a>
+	    <a href="&encode=zlib" class="list-group-item list-group-item-action">Zlib encode</a>
+		<a href="&decode=zlib^" class="list-group-item list-group-item-action">Zlib decode</a>
+		{% if request.args.get("encode") == "zlib" %}
+		<a href="/download/encode_data" class="list-group-item list-group-item-action">Dump file</a>
+		{% elif request.args.get("encode") == "zlib^" %}
+		<a href="/download/decode_data" class="list-group-item list-group-item-action">Dump file</a>
+		{% endif %}
 	</div>
     </div>
     </body>
